--- a/newindex.html
+++ b/newindex.html
@@ -16,13 +16,13 @@
 </head>
 
 <body id="body">
-        <div class="nav" id="nav-container">
+        <div class="nav" id="navContainer">
             <!----------------------------------------------------------->
             <!--<div class="index-container">
                 <a href="index.html" class="logo"> FST BRK </a>
             </div>-->
             <!----------------------------------------------------------->
-            <div id="menu-nav">
+            <div id="menuNav">
                 <ul>
                     <a href="index.html" class="logo"> FST BRK </a>
                     <li><a href="instructions.html"> Instructions </a></li>
@@ -33,34 +33,34 @@
 
         <!---------------------------------------------------------------------------------------->
         <!-- Begin game button-->
-        <div id="start_container">
-            <button id="Play" class="start_button"> Play Now ! </button>
+        <div id="startContainer">
+            <button id="Play" class="startButton"> Play Now ! </button>
         </div>
 
-        <div id="game_buttons">
-            <div id="offensive_button_container"></div>
-            <div id="defensive_button_container"></div>
+        <div id="gameButtons">
+            <div id="offensiveButtonContainer"></div>
+            <div id="defensiveButtonContainer"></div>
         </div>
 
         <!--Game Move Actions-->
-        <!--<div id="user_move"></div>
-        <div id="computer_move"></div>
-        <div id="match_response"></div>
-        <div id="response_container"></div>-->
+        <!--<div id="userMove"></div>
+        <div id="computerMove"></div>
+        <div id="matchResponse"></div>
+        <div id="responseContainer"></div>-->
         <!------------------------------------------------------------------------------------------->
-        <div class="main_game_container">
+        <div class="mainGameContainer">
             <!------------------------------------------------------------------------------------------->
 
             <!--Characters-->
-            <div id="user_character"></div>
-            <div id="computer_character"></div>
-            <div id="court_select"></div>
-            <!--<div id="match_response"></div>
-            <div id="response_container"></div>-->
+            <div id="userCharacter"></div>
+            <div id="computerCharacter"></div>
+            <div id="courtSelect"></div>
+            <!--<div id="matchResponse"></div>
+            <div id="responseContainer"></div>-->
             <!------------------------------------------------------------------------------------------->
             <!-- score-->
-            <div id="user_score"></div>
-            <div id="computer_score"></div>
+            <div id="userScore"></div>
+            <div id="computerScore"></div>
             <div id="gameOver"></div>
             <!----------------------character and court art-------------------------------------->
 
@@ -68,52 +68,52 @@
             <img id="computerArt">
 
 
-            <!--<div id="user_move"></div>
-            <div id="computer_move"></div>-->
+            <!--<div id="userMove"></div>
+            <div id="computerMove"></div>-->
 
-            <div id="user_Character_Art"></div>
-            <div id="computer_Character_Art"></div>
-            <div id="background_art"></div>
+            <div id="userCharacterArt"></div>
+            <div id="computerCharacterArt"></div>
+            <div id="backgroundArt"></div>
             <!---------------------------------------------------------------------------------------->
             <!----------------------------------------------------------------------------------------->
             <!-- Game button containers-->
 
 
-            <!--<div id="match_response"></div>-->
+            <!--<div id="matchResponse"></div>-->
         </div>
 
         <div id="moveContain">
-            <div id="user_move"></div>
-            <div id="computer_move"></div>
-            <div id="match_response"></div>
+            <div id="userMove"></div>
+            <div id="computerMove"></div>
+            <div id="matchResponse"></div>
         </div>
 
         <!-- Selection headers-->
-        <div id="head_title">
-            <div id="user_character_header_container"></div>
-            <div id="computer_character_header_container"></div>
-            <div id="court_selection_header_container"></div>
+        <div id="headTitle">
+            <div id="userCharacterHeaderContainer"></div>
+            <div id="computerCharacterHeaderContainer"></div>
+            <div id="courtSelectionHeaderContainer"></div>
         </div>
 
         <!---------------------------------------------------------------------------------------->
         <!--Character buttons-->
-        <div id="character_button_container">
-            <div id="user_character_button_container"></div>
-            <div id="computer_character_button_container"></div>
-            <div id="court_buttons_container"></div>
+        <div id="characterButtonContainer">
+            <div id="userCharacterButtonContainer"></div>
+            <div id="computerCharacterButtonContainer"></div>
+            <div id="courtButtonsContainer"></div>
         </div>
 
         <!---------------------------------------------------------------------------------------->
         <!-- Random buttons-->
-        <div id="random_court_container">
-            <div id="random_user_button"></div>
-            <div id="random_computer_button"></div>
-            <div id="random_court_button"></div>
+        <div id="randomCourtContainer">
+            <div id="randomUserButton"></div>
+            <div id="randomComputerButton"></div>
+            <div id="randomCourtButton"></div>
         </div>
 
         <!----------------------------------------------------------------------------------------->
         <!--reset game-->
-        <div id="game_reset"></div>
+        <div id="gameReset"></div>
 
         <!--<div id="footer">Ian Kimble</div>-->
 
